--- a/consulta_prof/pubspec.yaml
+++ b/consulta_prof/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   fluttertoast: 3.1.3
   flutter_email_sender: 2.1.0
   flutter_secure_storage: 3.3.1+1
+  flutter_masked_text: 0.8.0
   test: 1.6.3
   dio: 2.1.16
 
