--- a/api/package.json
+++ b/api/package.json
@@ -27,10 +27,11 @@
     "express": "^4.16.4",
     "helmet": "^3.18.0",
     "multer": "^1.4.1",
-    "mysql2": "^1.6.5",
+    "mysql2": "^1.7.0",
     "promise-mysql": "^3.3.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "sequelize": "^5.21.2",
     "winston": "^3.2.1"
   },
   "engines": {
