--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "./api/dist/app.js",
   "scripts": {
-    "start": "node ./api/dist/app.js",
+    "start": "npm run build && node ./api/dist/app.js",
     "lint": "tsc --noEmit && eslint \"**/*.{tsx,ts}\" --quiet --fix",
-    "build": "npm run build-ts",
-    "build-ts": "tsc",
+    "build": "cd api & npm run build-ts",
+    "build-ts": "cd api & tsc",
     "watch-ts": "tsc -w",
     "serve": "concurrently \"npm run watch-ts\" \"nodemon api/src/app.js\"",
     "test": "jest --forceExit --coverage --verbose"
