--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "./api/dist/app.js",
   "scripts": {
-    "start": "cd api && tsc && node ./dist/app.js",
+    "start": "npm install -g typescript && cd api && tsc && node ./dist/app.js",
     "lint": "tsc --noEmit && eslint \"**/*.{tsx,ts}\" --quiet --fix",
-    "build-ts": "cd api & tsc",
+    "build-ts": "cd api && tsc && node ./dist/app.js",
     "watch-ts": "tsc -w",
     "serve": "concurrently \"npm run watch-ts\" \"nodemon api/src/app.js\"",
     "test": "jest --forceExit --coverage --verbose"
