--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_masked_text: 0.8.0
   test: 1.6.3
   dio: 2.1.16
+  flutter_rating: ^0.0.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
