master - Adiciona tela para adicionar avaliações

--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.desafio_ui_20191005"
+        applicationId "com.example.app"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
