--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-ts": "cd api && tsc && node ./dist/app.js",
     "watch-ts": "tsc -w",
     "serve": "concurrently \"tsc -w\" \"nodemon api/src/app.js\"",
-    "test": "jest --forceExit --coverage --verbose"
+    "test": "jest --forceExit --coverage --verbose",
+    "doc": "jsdoc api/src"
   },
   "keywords": [],
   "author": "José da Costa Nunes Neto",
@@ -26,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
+    "jsdoc": "^3.6.3",
     "multer": "^1.4.1",
     "mysql2": "^1.7.0",
     "promise-mysql": "^3.3.1",
