--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "./api/dist/app.js",
   "scripts": {
     "start": "npm install -g typescript && cd api && tsc && node ./dist/app.js",
-    "lint": "tsc --noEmit && eslint \"**/*.{tsx,ts}\" --quiet --fix",
+    "lint": "tsc --noEmit && eslint \"**/*.{tsx,ts}\" --fix",
     "build-ts": "cd api && tsc && node ./dist/app.js",
     "watch-ts": "tsc -w",
     "serve": "concurrently \"tsc -w\" \"nodemon api/src/app.js\"",
     "test": "jest --forceExit --coverage --verbose",
-    "doc": "jsdoc api/"
+    "doc": "tsdoc api/src/lib"
   },
   "keywords": [],
   "author": "José da Costa Nunes Neto",
@@ -36,6 +36,7 @@
     "request-promise": "^4.2.4",
     "sequelize": "^5.21.2",
     "sequelize-typescript": "^1.0.0",
+    "tsdoc": "0.0.4",
     "winston": "^3.2.1"
   },
   "engines": {
